# ocr

./: gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle  eneo.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: classifications.xml  images.xml
app/src/main/cpp/: knn.cpp  knn.h
app/src/main/java/com/eneo/ocr/: BaseActivity.java  BaseIntro.java  BluetoothClient.java  BluetoothHome.java  BluetoothServerActivity.java  Box.java  CannyActivity.java  CapturePreview.java  CapturedList.java  ConnectedThread.java  FramesActivity.java  GetLocation.java  HomePage.java  ImageManipulationsActivity.java  InputForm.java  MainActivity.java  MyIntro.java  NativeClass.java  OcrCaptureActivity.java  OcrDetectorProcessor.java  OcrGraphic.java  OpenCVActivity.java  ResultActivity.java  SendData.java  SerialActivity.java  StartCamera.java  Test.java  TestCrop.java  Tutorial2Activity.java
app/src/main/java/com/eneo/ocr/Model/: AppController.java  Datalocal.java  LruBitmapCache.java  MyShortcuts.java
app/src/main/java/com/eneo/ocr/camera/: CameraSource.java  CameraSourcePreview.java  GraphicOverlay.java
app/src/main/java/com/eneo/ocr/processing/: BullseyeCameraManager.java  CVProcessor.java  CameraManagerListener.java  MVRTCameraView.java  MainActivity.java  OutputSocketServer.java  ProcessingOutputView.java  VisionPrefs.java
app/src/main/java/com/eneo/ocr/util/: MemoryInfo.java
app/src/main/jni/: Android.mk  jni_part.cpp  native-lib.cpp
app/src/main/res/: Backup_Isiolo_Reports_one.csv
app/src/main/res/drawable/: circle.xml
app/src/main/res/layout/: activity_capturedlist.xml  activity_main.xml  activity_open_cv.xml  activity_result.xml  activity_send_data.xml  app_bar_location.xml  capture.xml  cardview_detail.xml  cardview_layout.xml  content_open_cv.xml  content_send_data.xml  location.xml  nav_header_home_page.xml  tutorial2_surface_view.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/layout-v17/: activity_main.xml
app/src/main/res/menu/: activity_home_page_drawer.xml  activity_main.xml  contextmenu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+5 files in other folders)
